[package]
name = "Kafkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "kafkit"
path = "src/lib.rs"

[[bin]]
name = "kafkit_cli"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
rand = "0.8.5"
regex = "1.7.3"
strum = "0.24.1"
strum_macros = "0.24.3"
